L3 almost done (no bug fixes etc)

--- a/ASP_LABS/ASP_LABS.csproj
+++ b/ASP_LABS/ASP_LABS.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Areas\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ASP_LABS.Domain\ASP_LABS.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
