--- a/ASP_LABS.API/appsettings.json
+++ b/ASP_LABS.API/appsettings.json
@@ -8,5 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqliteConnection": "Data Source = {0}MenuDb.db"
-  }
+  },
+  "ImagesUrl": "https://localhost:7002"
 }
