--- a/ASP_LABS/ASP_LABS.csproj
+++ b/ASP_LABS/ASP_LABS.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ASP_LABS.Domain\ASP_LABS.Domain.csproj" />
   </ItemGroup>
 
