--- a/ASP_LABS.API/appsettings.json
+++ b/ASP_LABS.API/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "SqliteConnection": "Data Source = {0}MenuDb.db"
   },
-  "ImagesUrl": "https://localhost:7002"
+  "ImagesUrl": "https://localhost:7002",
+  "isUri": "https://localhost:7003/"
 }
